--- a/js_learning/index.html
+++ b/js_learning/index.html
@@ -9,5 +9,7 @@
 <body>
     <h1>Hello Bangladesh!!</h1>
     <h2>I'm pushing my first code on github</h2>
+    <h2>I'm pushing my second code on github</h2>
+    <h2>I'm pushing my third code on github</h2>
 </body>
 </html>
