--- a/js_learning/index.html
+++ b/js_learning/index.html
@@ -7,6 +7,7 @@
     <title>My first github push from IDE</title>
 </head>
 <body>
-    <h1>Hello Bangladesh!!</h1>
+    <h1>Hello World!!</h1>
+    <h1>Hello World!!</h1>
 </body>
 </html>
